; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/setupapi/extr_misc.c_get_temp_filename.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/setupapi/extr_misc.c_get_temp_filename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@CURR_DIR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [4 x i8] c"set\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @get_temp_filename to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @get_temp_filename(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %6 = load i32, i32* @MAX_PATH, align 4
  %7 = zext i32 %6 to i64
  %8 = call i8* @llvm.stacksave()
  store i8* %8, i8** %3, align 8
  %9 = alloca i32, i64 %7, align 16
  store i64 %7, i64* %4, align 8
  %10 = load i32, i32* @CURR_DIR, align 4
  %11 = call i32 @GetTempFileNameA(i32 %10, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i32 0, i32* %9)
  %12 = call i64 @strrchr(i32* %9, i8 signext 92)
  store i64 %12, i64* %5, align 8
  %13 = load i64, i64* %2, align 8
  %14 = load i64, i64* %5, align 8
  %15 = add nsw i64 %14, 1
  %16 = call i32 @strcpy(i64 %13, i64 %15)
  %17 = load i8*, i8** %3, align 8
  call void @llvm.stackrestore(i8* %17)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @GetTempFileNameA(i32, i8*, i32, i32*) #2

declare dso_local i64 @strrchr(i32*, i8 signext) #2

declare dso_local i32 @strcpy(i64, i64) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
